[package]
name = "ant-design-dioxus"
version = "0.1.0"
edition = "2021"
authors = ["Ant Design Dioxus Team"]
description = "An enterprise-class UI design language and Dioxus components implementation"
license = "MIT"
repository = "https://github.com/ant-design/ant-design-dioxus"
homepage = "https://ant-design-dioxus.rs"
keywords = ["ant", "design", "ui", "dioxus", "components", "web"]
categories = ["web-programming", "gui"]
readme = "README.md"

[dependencies]
# Dioxus 核心框架
dioxus = { version = "0.6", features = ["router"] }
# dioxus-web = { version = "0.6", optional = true }  # 暂时注释掉，后续需要时再启用

# 工具库
serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"  # 暂时注释掉，后续需要时再启用
# chrono = { version = "0.4", features = ["serde"] }  # 暂时注释掉，后续需要时再启用
# uuid = { version = "1.0", features = ["v4", "serde"] }  # 暂时注释掉，后续需要时再启用
# once_cell = "1.19"  # 暂时注释掉，后续需要时再启用

# Web APIs (暂时注释掉，后续需要时再启用)
# web-sys = "0.3"
# js-sys = "0.3"
# wasm-bindgen = "0.2"
# wasm-bindgen-futures = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
# web = ["dioxus-web"]  # 暂时注释掉，后续需要时再启用
# desktop = ["dioxus-desktop"]  # 暂时注释掉，后续需要时再启用

# 可选的桌面和移动端支持（暂时注释掉，后续需要时再启用）
# [dependencies.dioxus-desktop]
# version = "0.6"
# optional = true
