[package]
name = "ant-design-dioxus"
version = "0.1.0"
edition = "2021"
authors = ["Ant Design Dioxus Team"]
description = "An enterprise-class UI design language and Dioxus components implementation"
license = "MIT"
repository = "https://github.com/ant-design/ant-design-dioxus"
homepage = "https://ant-design-dioxus.rs"
keywords = ["ant", "design", "ui", "dioxus", "components", "web"]
categories = ["web-programming", "gui"]
readme = "README.md"

[dependencies]
dioxus = { version = "0.6.3", features = ["router", "web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
web-sys = { version = "0.3", features = [
    "console",
    "ScrollToOptions",
    "ScrollBehavior",
    "Document",
    "Element",
    "Window",
    "Storage",
    "MediaQueryList",
    "MediaQueryListEvent",
    "Navigator",
    "Clipboard",
    "HtmlDivElement",
    "HtmlHeadElement",
    "HtmlElement",
    "CssStyleDeclaration",
    "VisibilityState",
    "Event",
    "EventTarget",
    "DomRect",
    "HtmlScriptElement",
    "HtmlImageElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
] }
js-sys = "0.3"
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.40"
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4"
qrcode = "0.14.1"
base64 = "0.22.1"

css-in-rust = { path = "../css-in-rust/css-in-rust" }
# css-in-rust-macros = { path = "../css-in-rust/css-in-rust-macros" }

# Random number generation with WASM support
# rand dependency removed - using custom random string generation for WASM compatibility

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
# rand = "0.9.1"
# dioxus-ssr = "0.6.2"

# 启用 proc-macro 特性
[build-dependencies]

# [features]
# default = []
# web = ["dioxus-web"]
# desktop = ["dioxus-desktop"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
