[package]
name = "ant-design-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "style_migrator"
path = "src/style_migrator.rs"

[[bin]]
name = "structure_generator"
path = "src/structure_generator.rs"

[[bin]]
name = "quality_checker"
path = "src/quality_checker.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
walkdir = "2.0"
toml = "0.8"
log = "0.4"
env_logger = "0.10"
colorized = "1.0"
indoc = "2.0"

[dev-dependencies]
tempfile = "3.0"
