[workspace]
members = [
    "style-migrator",
    "structure-generator", 
    "quality-checker",
    "common"
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
walkdir = "2.0"
toml = "0.8"
log = "0.4"
env_logger = "0.10"
colorized = "1.0"
tempfile = "3.0"
