[package]
name = "quality-checker"
version = "0.1.0"
edition = "2021"
description = "组件质量检查工具"

[[bin]]
name = "quality-checker"
path = "src/main.rs"

[dependencies]
ant-design-tools-common = { path = "../common" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
colorized = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }